# grok_cmake_wickedengine_window

./: CMakeLists.txt  README.md  build.bat
src/: main.cpp
